最后一个例子「缩进以标记代码区段」中，Markdown 的语法演示未加 Tab。

--- a/basic.html
+++ b/basic.html
@@ -256,11 +256,11 @@ entites like &lt;code&gt;&amp;amp;#8212;&lt;/code&gt;.&lt;/p&gt;
 <p>Markdown 语法:</p>
 
 <pre><code>If you want your page to validate under XHTML 1.0 Strict,
-you've got to put paragraph tags in your blockquotes:
+you&#39;ve got to put paragraph tags in your blockquotes:
 
-&lt;blockquote&gt;
-&lt;p&gt;For example.&lt;/p&gt;
-&lt;/blockquote&gt;
+    &lt;blockquote&gt;
+    &lt;p&gt;For example.&lt;/p&gt;
+    &lt;/blockquote&gt;
 </code></pre>
 
 <p>输出 HTML 为：</p>
