modified:   assets/t.htm

--- a/assets/t.htm
+++ b/assets/t.htm
@@ -17,8 +17,8 @@
 </head>
 <body>
 <h1>Just for Test</h1>
---BEGIN--
-<video src="lfs/Planetarian雪桜草.mp4" controls>【雪桜草】 planetarian ～ちいさなほしのうた～　PV - YouTube</video>
+--BEGIN--<br>
+<video src="/assets/lfs/Planetarian雪桜草.mp4" controls>【雪桜草】 planetarian ～ちいさなほしのうた～　PV - YouTube</video><br>
 --END--
 </body>
 </html>
