modified:   assets/t.htm

--- a/assets/t.htm
+++ b/assets/t.htm
@@ -18,7 +18,10 @@
 <body>
 <h1>Just for Test</h1>
 --BEGIN--<br>
-<video src="/assets/lfs/Planetarian雪桜草.mp4" controls>【雪桜草】 planetarian ～ちいさなほしのうた～　PV - YouTube</video><br>
+<video src="https://media.githubusercontent.com/media/galaxy001/galaxy001.github.com/master/assets/lfs/Planetarian雪桜草.mp4" controls>【雪桜草】 planetarian ～ちいさなほしのうた～　PV - YouTube</video><br>
+<p>
+https://media.githubusercontent.com/media/galaxy001/galaxy001.github.com/master/assets/lfs/Planetarian%E9%9B%AA%E6%A1%9C%E8%8D%89.mp4
+</p>
 --END--
 </body>
 </html>
