--- a/assets/t.htm
+++ b/assets/t.htm
@@ -22,6 +22,16 @@
 <p>
 https://media.githubusercontent.com/media/galaxy001/galaxy001.github.com/master/assets/lfs/Planetarian%E9%9B%AA%E6%A1%9C%E8%8D%89.mp4
 </p>
+<hr>
+<p>
+	http://segmentfault.com/q/1010000000424925
+	<video id="video" controls="" preload="none" poster="http://media.w3.org/2010/05/sintel/poster.png">
+		<source id="mp4" src="http://media.w3.org/2010/05/sintel/trailer.mp4" type="video/mp4">
+		<source id="webm" src="http://media.w3.org/2010/05/sintel/trailer.webm" type="video/webm">
+		<source id="ogv" src="http://media.w3.org/2010/05/sintel/trailer.ogv" type="video/ogg">
+		<p>Your user agent does not support the HTML5 Video element.</p>
+	</video>
+</p>
 --END--
 </body>
 </html>
